JIRA ID [APSTRATA-1294] FIXED : (1) Word wrapping of long text in the survey action list, title, description, and fields. (2) Moved the success message upwards underneath the "Show results to users" checkbox

--- a/apstrataDojoSDK/apstrata/themes/apstrata/HStackableContainer.css
+++ b/apstrataDojoSDK/apstrata/themes/apstrata/HStackableContainer.css
@@ -147,4 +147,5 @@
 
 .horizon .verticalList .item .label {
 	padding-left: 3px;
+	word-wrap: break-word;
 }
